fixed: scrollbar styling

--- a/web/static/styles/index.css
+++ b/web/static/styles/index.css
@@ -4,21 +4,26 @@ html{
     line-height: 1;
     letter-spacing: 2px;
     scroll-behavior: smooth;
+    --scrollbarBG: #e7dfff;
+    --thumbBG: #bea7fc;    
 }
 
 /* scrollbar:start */
 
 body::-webkit-scrollbar {
-    width: 1.1em !important;
+    width: 1rem;
 }
-
+body {
+    scrollbar-width: thin;
+    scrollbar-color: var(--thumbBG) var(--scrollbarBG);
+}
 body::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 6px rgba(132, 81, 204, 0.15) !important;
+    background: var(--scrollbarBG);
 }
-
 body::-webkit-scrollbar-thumb {
-    background-color: rgba(132, 81, 204, 0.3) !important;
-    outline: 1px solid #8ca6dba6!important;
+    background-color: var(--thumbBG) ;
+    border-radius: 0.5rem;
+    border: 0.25rem solid var(--scrollbarBG);
 }
 
 /* scrollbar:end */
